@@ -20,6 +20,7 @@ CHANGELOG
 * Add POIs on trek GPX (fixes #774)
 * Allow to override the Trek public document template
   (see *advanced configuration* in docs)
+* Show POI name on hover instead of category in trek detail pages (fixes #1004)
 
 
 0.23.1 (2014-05-22)
